--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,6 @@ env:
     - PATH="/usr/local/opt/llvm/bin:/usr/lib/llvm-6.0/bin/:$PATH"
     - LDFLAGS="-L/usr/local/opt/llvm/lib -Wl,-rpath,/usr/local/opt/llvm/lib"
     - CPPFLAGS="-I/usr/local/opt/llvm/include"
-script: make test
+script:
+  - clang --version
+  - make test
